Fim da config do site keke

--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   },
   "homepage": "https://github.com/lucastayar12/TrabalhoFinalDAWI#readme",
   "dependencies": {
+    "@popperjs/core": "^2.6.0",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.5.3",
     "express": "^4.17.1",
+    "express-handlebars": "^5.2.0",
     "jquery": "^3.5.1",
     "nodemon": "^2.0.7",
     "pg": "^8.5.1",
