--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@popperjs/core": "^2.6.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.3",
+    "bootstrap-icons": "^1.3.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "jquery": "^3.5.1",
